--- a/.github/workflows/deploy_ssh.yml
+++ b/.github/workflows/deploy_ssh.yml
@@ -18,5 +18,5 @@ jobs:
         port: 22
         script: |
             pwd
-            cd ${{ github.event.repository.name }}/part2/04-cicd
+            cd part2/04-cicd #${{ github.event.repository.name }}/part2/04-cicd
             sh deploy_ssh.sh
