--- a/.github/workflows/deploy_ssh.yml
+++ b/.github/workflows/deploy_ssh.yml
@@ -19,5 +19,6 @@ jobs:
         port: 22
         script: |
             pwd
-            cd part2/04-cicd #${{ github.event.repository.name }}/part2/04-cicd
+            ls -a 
+            cd ${{ github.event.repository.name }}/part2/04-cicd
             sh deploy_ssh.sh
