--- a/.github/workflows/deploy_ssh.yml
+++ b/.github/workflows/deploy_ssh.yml
@@ -20,5 +20,5 @@ jobs:
         script: |
             pwd
             ls -a 
-            cd ${{ github.event.repository.name }}/part2/04-cicd
+            cd .ssh/${{ github.event.repository.name }}/part2/04-cicd
             sh deploy_ssh.sh
